# ser334

./: BMPHandler.c  Image.c
Module11/: Assignment.txt  CMakeLists.txt  Exam3.txt  Simulator.c  WhittemoreDataLoader.c  WhittemoreDataLoader.h  WhittemorePageTable.c  WhittemorePageTable.h  data-1.txt
Module3/: CMakeLists.txt  LinkedList.c  LinkedList.h  main.c
Module7/WhittemoreLoadBalancer/: CMakeLists.txt  InstanceHost-1.h  LoadBalancer-1.h  Module7.txt  User-1.c  WhittemoreInstanceHost.c  WhittemoreLoadBalancer.c
SER334_Module9/: CMakeLists.txt  README_1.txt  WhittemoreSJFL.c  WhittemoreSJFL.h  data_1.txt  test_input.txt
WhittemoreImageProcessor/: BMPHandler.c  BMPHandler.h  CMakeLists.txt  Image.c  Image.h  WhittemoreImageProcessor.c
